src/app.css
@import 'tailwindcss';
@plugin '@tailwindcss/typography';
@plugin "daisyui" {
	themes: black;
}
:root {
	color-scheme: dark;
}

body {
	@apply flex min-h-screen flex-col;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

.prose {
	@apply max-w-4xl leading-7! sm:text-lg sm:leading-9! md:text-xl;

	h1 {
		font-weight: 700;
		font-size: 2.25rem;
	}

	h2 {
		font-weight: 700;
		font-size: 1.875rem;
	}

	h3 {
		font-weight: 700;
		font-size: 1.25rem;
	}

	h4 {
		font-weight: 700;
		font-size: 1rem;
	}

	h5 {
		font-weight: 700;
		font-size: 0.75rem;
	}

	h6 {
		font-weight: 700;
		font-size: 0.875rem;
	}

	h3 code {
		@apply text-lg! md:text-xl!;
	}

	pre {
		@apply rounded-none bg-base-200! px-0! text-base-content!;
	}

	code {
		@apply text-sm leading-loose! md:text-base;
	}

	pre > code {
		counter-reset: line;
	}

	code[data-line-numbers] {
		counter-reset: line;
	}

	code[data-line-numbers] > [data-line]::before {
		counter-increment: line;
		content: counter(line);
		@apply mr-4 inline-block w-4 text-right text-base-content/40;
	}

	pre [data-line] {
		@apply border-l-2 border-l-transparent px-2;
	}

	[data-highlighted-line] {
		@apply border-l-info bg-base-content/10;
	}

	[data-highlighted-chars] {
		@apply bg-base-content/10 shadow-[0_0_0_4px] shadow-base-content/10;
	}

	[data-chars-id] {
		@apply border-b-2 p-1 shadow-none;
	}

	[data-chars-id] span {
		@apply text-inherit!;
	}

	[data-chars-id='v'] {
		@apply border-b-error bg-error/20 font-bold text-error!;
	}

	[data-chars-id='s'] {
		@apply border-b-warning bg-warning/20 font-bold text-warning!;
	}

	[data-chars-id='i'] {
		@apply border-b-info bg-info/20 font-bold text-info!;
	}

	[data-rehype-pretty-code-title] {
		@apply bg-neutral px-3 py-2 text-sm font-semibold text-neutral-content;
	}

	figcaption + pre {
		@apply rounded-t-none!;
	}

	figure {
		@apply mt-1 mb-6;
	}
	pre,
	code,
	figure {
		@apply overflow-x-auto py-1;
	}
	p {
		@apply text-xl;
	}
}

